--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "vue-apollo": "^2.1.0-rc.4",
     "vue-awesome": "^2.3.3",
     "vue-axios": "^2.0.2",
+    "vue-ls": "^2.3.3",
     "vue-router": "^2.7.0",
+    "vue-toast": "^3.1.0",
+    "vue-toasted": "^1.1.18",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
